--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <header>a
-
+    <header>
+      <div class="H1"> <img class="logo" src="https://i.imgur.com/woX9Ti1.png" border="0"> </div>
     </header>
     <nav>s
 
