--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title> Tincho Ground</title>
+    <meta name="viewport" content="witdh=device-witdh, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <header>
       <div class="H1"> <img class="logo" src="https://i.imgur.com/woX9Ti1.png" border="0"> </div>
     </header>
-    <nav>s
-
+    <nav>
+      <ul>
+        <li> Inicio </li>
+        <li> Juegos </li>
+        <li> Emuladores</li>
+      </ul>
     </nav>
 
     <div class="S1A1">
