--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
     <title> Tincho Ground</title>
     <meta name="viewport" content="witdh=device-witdh, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/script.js"></script>
   </head>
   <body>
+
     <header>
       <div class="H1"> <img class="logo" src="https://i.imgur.com/woX9Ti1.png" border="0"> </div>
     </header>
-    <nav>
-      <ul>
-        <li> Inicio </li>
-        <li> Juegos </li>
-        <li> Emuladores</li>
-      </ul>
-    </nav>
+
+    <div class="navbar">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <div class="dropdown">
+        <button class="dropbtn" onclick="myFunction()">Dropdown</button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div> 
+    </div>
 
     <div class="S1A1">
-      <section class="s1">d
-
+      <section class="s1">
+        
       </section>
-      <aside class="a1">f
-
+      <aside class="a1">
+        
       </aside>
     </div>
-    <footer>d
 
+    <footer>
+      <div></div>
     </footer>
   </body>
 </html>
