--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
 
     <div class="navbar">
-      <a class="itemNav" href="#home">Inicio</a>
-      <a class="itemNav" href="#news">News</a>
+      <a class="itemNav" onclick="showCosas('juegos', 's1')">Inicio</a>
+      <a class="itemNav" onclick="showCosas('s1', 'juegos')">Juegos</a>
       <div class="dropdown">
         <button class="dropbtn" onclick="myFunction()">Dropdown</button>
         <div class="dropdown-content" id="myDropdown">
@@ -26,7 +26,7 @@
       </div> 
     </div>
 
-    <div class="S1A1">
+    <div id="S1A1">
       <section class="s1">
         <h1>Bienvenido a "Tincho Ground"</h1>
         <h2>Datos de la P&aacute;gina</h2>
@@ -38,6 +38,9 @@
 
 
         </p>
+      </section>
+      <section class="juegos">
+        <h1>hola</h1>
       </section>
       <aside class="a1">
         <h2> Recomendaciones</h2>
