--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
 
     <div class="navbar">
-      <a class="itemNav" onclick="showCosas('juegos', 's1')">Inicio</a>
-      <a class="itemNav" onclick="showCosas('s1', 'juegos')">Juegos</a>
+      <a class="itemNav" onclick="tikiTaka('s1')">Inicio</a>
+      <a class="itemNav" onclick="tikiTaka('juegos')">Juegos</a>
       <div class="dropdown">
-        <button class="dropbtn" onclick="myFunction()">Dropdown</button>
+        <button class="dropbtn" onclick="myFunction()">Emuladores</button>
         <div class="dropdown-content" id="myDropdown">
-          <a href="#">Link 1</a>
+          <a href="#" onclick="tikiTaka('emuladores')">Prueba 1</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
@@ -27,7 +27,7 @@
     </div>
 
     <div id="S1A1">
-      <section class="s1">
+      <section class="s1  viendo">
         <h1>Bienvenido a "Tincho Ground"</h1>
         <h2>Datos de la P&aacute;gina</h2>
         <p>
@@ -39,8 +39,11 @@
 
         </p>
       </section>
-      <section class="juegos">
-        <h1>hola</h1>
+      <section class="juegos escond">
+        <h1>Hola desde juegos</h1>
+      </section>
+      <section class="emuladores escond"> 
+        <h1> Hola desde emuladores</h1>
       </section>
       <aside class="a1">
         <h2> Recomendaciones</h2>
