--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="navbar">
       <a class="itemNav" onclick="tikiTaka('s1')">Inicio</a>
       <a class="itemNav" onclick="tikiTaka('juegos')">Juegos</a>
-      <div class="dropdown">
-        <button class="dropbtn" onclick="myFunction()">Emuladores</button>
-        <div class="dropdown-content" id="myDropdown">
-          <a href="#" onclick="tikiTaka('emuladores')">Prueba 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div> 
+      
+      <div class="emu2"><!---->
+          <button>Emuladores</button>
+            <div class="otro">
+              <a onclick="tikiTaka('emuladores')">ver</a>
+              <a>2</a>
+            </div>
+      </div>
     </div>
 
     <div id="S1A1">
