--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
 
     <div class="navbar">
       <a class="itemNav" onclick="tikiTaka('s1')">Inicio</a>
-      <a class="itemNav" onclick="tikiTaka('juegos')">Juegos</a>
+      <div class="emu2"><!---->
+        <button>Juegos</button>
+        <div class="otro">
+          <a onclick="tikiTaka('juegos')">ver</a>
+          <a>2</a>
+        </div>
+    </div>
       
       <div class="emu2"><!---->
-          <button>Emuladores</button>
-            <div class="otro">
-              <a onclick="tikiTaka('emuladores')">ver</a>
-              <a>2</a>
-            </div>
+          <button onclick="tikiTaka('emuladores')">Emuladores</button>
+          <div class="otro">
+            <a onclick="tikiTaka('gameboyadvance')">GameBoy Advance</a>
+            <a>2</a>
+          </div>
       </div>
     </div>
 
@@ -31,10 +37,8 @@
         <h1>Bienvenido a "Tincho Ground"</h1>
         <h2>Datos de la P&aacute;gina</h2>
         <p>
-          Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
-          Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. 
-          No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. 
-          Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
+          Buenas si estás en busca de ya sea juegos o emuladores esta es tu página.
+          Aquí podras encontrar juegos retro de GameBoyAdvance, Super Nintendo, Nintendo DS, etc. Y los Emuladores de los mismos
         </p>
       </section>
 
@@ -43,7 +47,24 @@
       </section>
 
       <section class="emuladores escond"> 
-        <h1> Hola desde emuladores</h1>
+        <h1> Emuladores</h1>
+        <h2>Concepto:</h2>
+        <p>
+          Un emulador es un software que permite ejecutar programas o videojuegos en una plataforma 
+          diferente de aquella para la cual fueron escritos originalmente.
+        </p>
+        <h2>Lista:</h2>
+        <ul class="listaEmu"> 
+          <li><a onclick="tikiTaka('gameboyadvance')">GameBoyAdvance</a></li>
+          <li><a href="">Super Nintendo</a></li>
+          <li><a href="">Nintendo DS </a></li>
+        </ul>
+      </section>
+      <section class="gameboyadvance escond"> 
+        <h1>GameBoyAdvance</h1>
+        <ul class="listaEmu">
+          <li><a href="https://www.mediafire.com/file/jlcazo8sdvmgc5o/VisualBoyAdvance.rar/file" target="_blank"> VisualBoyAdvance</a></li>
+        </ul>
       </section>
       <aside class="a1">
         <h2> Recomendaciones</h2>
