--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
         <h1>Juegos</h1>
         <h2>Lista:</h2>
         <ul class="listaEmu">
-          <li><a onclick="tikiTaka('gbaJuegos')">GameBoyAdvance</a></li>
+          <li><a onclick="tikiTaka('frame')">GameBoyAdvance</a></li>
           <li><a href="">Super Nintendo</a></li>
           <li><a href="">Nintendo DS</a></li>
         </ul>
       </section>
-      <section class="gbaJuegos escond"><!-- GAME BOY ADVANCE-->
+      <section class="gbaJuegos escond">
         <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>></a><a> GameBoyAdvance</a></div>
         <h1>GameBoyAdvance</h1>
-        
+        <div><iframe src="html/gbajuegos.html"></iframe></div><!-- GAME BOY ADVANCE-->
+        <br>
       </section>
       <!-- Comienzo PARTE DE EMULADORES-->
       <section class="emuladores escond"> <!--INICIO DE EMULADORES-->
