--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="itemNav" onclick="tikiTaka('s1')">Inicio</a>
       <div class="emu2"><!---->
         <button onclick="tikiTaka('juegos')">Juegos</button>
-        <div class="otro">
+        <div class="listaNav">
           <a onclick="tikiTaka('gbaJuegos')">GameBoy Advance</a>
             <a onclick="tikiTaka('')">Super Nintendo</a>
             <a onclick="tikiTaka('')">Nintendo DS</a>
@@ -26,7 +26,7 @@
       
       <div class="emu2"><!---->
           <button onclick="tikiTaka('emuladores')">Emuladores</button>
-          <div class="otro">
+          <div class="listaNav">
             <a onclick="tikiTaka('gameboyadvance')">GameBoy Advance</a>
             <a onclick="tikiTaka('superNintendo')">Super Nintendo</a>
             <a onclick="tikiTaka('nintendDs')">Nintendo DS</a>
@@ -48,7 +48,7 @@
         <h1>Juegos</h1>
         <h2>Lista:</h2>
         <ul class="listaEmu">
-          <li><a onclick="tikiTaka('frame')">GameBoyAdvance</a></li>
+          <li><a onclick="tikiTaka('gbaJuegos')">GameBoyAdvance</a></li>
           <li><a href="">Super Nintendo</a></li>
           <li><a href="">Nintendo DS</a></li>
         </ul>
