--- a/html/gbajuegos.html
+++ b/html/gbajuegos.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <section class="gba">
-        <h1>Prueba</h1>
         <div class="cuadritoJuego">
-            <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt=""><p>Descripcion</p><a>Descarga</a>
+            <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt="">
+            <div class="descJuego"><p>Descripcion</p><a>Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt="">
+            <div class="descJuego"><p>Descripcion</p><a>Descarga</a></div>
         </div>
     </section>
 </body>
