--- a/html/gbajuegos.html
+++ b/html/gbajuegos.html
@@ -12,11 +12,43 @@
     <section class="gba">
         <div class="cuadritoJuego">
             <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt="">
-            <div class="descJuego"><p>Descripcion</p><a>Descarga</a></div>
+            <div class="descJuego"><p>
+               <b>Nombre: Pokémon Rojo Fuego <br>
+                Idioma: Español <br>
+                </p>
+                <a href="https://www.mediafire.com/file/7yay3uezrrrnjg4/Pokemon_RojoFuego_Espanol.zip/file" target="_blank">Descarga</a></div>
         </div>
         <div class="cuadritoJuego">
-            <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt="">
-            <div class="descJuego"><p>Descripcion</p><a>Descarga</a></div>
+            <img class="imgJuego" src="../img/juegos/gba/mario&luigiSuperstar.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Mario & Luigi Superstar Saga<br>
+                Idioma: Multi-idioma <br>
+                </p>
+                <a href="https://www.mediafire.com/file/qm0kfpa081e3vzl/Mario_And_Luigi_Superstar_Saga_Multi_.zip/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/gba/EGBA225 Sonic Advance ESP.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Sonic Advance <br>
+                Idioma: Multi-idioma <br>
+                </p>
+                <a href="https://www.mediafire.com/file/ghe8ky16wj8ims6/Sonic_Advance_Multi_.zip/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/gba/EGBA239 Street Fighter Alpha 3 ESP.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Street Fighter Alpha 3 <br>
+                Idioma: Ingles <br>
+                </p>
+                <a href="https://www.mediafire.com/file/fwio70rg40sh8sv/Street_Fighter_Alpha_3_ENG_.zip/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/gba/Kirby And The Amazing Mirror ESP.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Kirby And The Amazing Mirror <br>
+                Idioma: Multi-idioma <br>
+                </p>
+                <a href="https://www.mediafire.com/file/1sqq6txltavayxr/Kirby_And_The_Amazing_Mirror_Multi_.zip/file" target="_blank">Descarga</a></div>
         </div>
     </section>
 </body>
