--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <button onclick="tikiTaka('juegos')">Juegos</button>
         <div class="listaNav">
           <a onclick="tikiTaka('gbaJuegos')">GameBoy Advance</a>
-            <a onclick="tikiTaka('')">Super Nintendo</a>
-            <a onclick="tikiTaka('')">Nintendo DS</a>
+          <a onclick="tikiTaka('snesJuegos')">Super Nintendo</a>
+          <a onclick="tikiTaka('ndsJuegos')">Nintendo DS</a>
         </div>
     </div>
       
@@ -49,14 +49,26 @@
         <h2>Lista:</h2>
         <ul class="listaEmu">
           <li><a onclick="tikiTaka('gbaJuegos')">GameBoyAdvance</a></li>
-          <li><a href="">Super Nintendo</a></li>
-          <li><a href="">Nintendo DS</a></li>
+          <li><a onclick="tikiTaka('snesJuegos')">Super Nintendo</a></li>
+          <li><a onclick="tikiTaka('ndsJuegos')">Nintendo DS</a></li>
         </ul>
       </section>
       <section class="gbaJuegos escond">
-        <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>></a><a> GameBoyAdvance</a></div>
+        <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>> GameBoyAdvance</a></div>
         <h1>GameBoyAdvance</h1>
         <div><iframe src="html/gbajuegos.html"></iframe></div><!-- GAME BOY ADVANCE-->
+        <br>
+      </section>
+      <section class="snesJuegos escond">
+        <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>> Super Nintendo</a></div>
+        <h1>Super Nintendo</h1>
+        <div><iframe src="html/snesJuegos.html"></iframe></div><!-- SUPER NINTENDO-->
+        <br>
+      </section>
+      <section class="ndsJuegos escond">
+        <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>> Nintendo DS</a></div>
+        <h1>Nintendo DS</h1>
+        <div><iframe src="html/ndsJuegos.html"></iframe></div><!-- SUPER NINTENDO-->
         <br>
       </section>
       <!-- Comienzo PARTE DE EMULADORES-->
@@ -75,21 +87,21 @@
         </ul>
       </section>
       <section class="gameboyadvance escond"><!-- GAME BOY ADVANCE-->
-        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>></a><a> GameBoyAdvance</a></div> 
+        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> GameBoyAdvance</a></div> 
         <h1>GameBoyAdvance</h1>
         <ul class="listaEmu">
           <li><a href="https://www.mediafire.com/file/jlcazo8sdvmgc5o/VisualBoyAdvance.rar/file" target="_blank"> VisualBoyAdvance</a></li>
         </ul>
       </section>
       <section class="superNintendo escond"><!-- SUPER NINTENDO-->
-        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>></a><a> Super Nintendo</a></div> 
+        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> Super Nintendo</a></div> 
         <h1>Super Nintendo</h1>
         <ul class="listaEmu">
           <li><a href="https://www.mediafire.com/file/4ab59cos9x206rg/ZSNES.rar/file" target="_blank"> ZSNES</a></li>
         </ul>
       </section>
       <section class="nintendDs escond"><!-- NINTENDO DS-->
-        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>></a><a> Nintendo DS</a></div> 
+        <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> Nintendo DS</a></div> 
         <h1>Nintendo DS</h1>
         <ul class="listaEmu">
           <li><a href="https://www.mediafire.com/file/b60pp77hes5bqdm/DeSmuME.rar/file" target="_blank"> DeSmuME</a></li>
