--- a/html/ndsJuegos.html
+++ b/html/ndsJuegos.html
@@ -11,12 +11,44 @@
 <body>
     <section class="gba">
         <div class="cuadritoJuego">
-            <img class="imgJuego" src="../img/juegos/gba/pkmrojofuego.jpg" alt="">
+            <img class="imgJuego" src="../img/juegos/nds/pokemon-edicion-negra-(dsi-enhanced)-(s)-nintendo-ds.jpg" alt="">
             <div class="descJuego"><p>
-               <b>Nombre: Pokémon Rojo Fuego <br>
+               <b>Nombre: Pokémon Edici&oacute;n Negra <br>
                 Idioma: Español <br>
                 </p>
-                <a href="https://www.mediafire.com/file/7yay3uezrrrnjg4/Pokemon_RojoFuego_Espanol.zip/file" target="_blank">Descarga</a></div>
+                <a href="https://www.mediafire.com/file/l8vw3x7w9q9oqc5/Pokemon_Edicion_Negra_Espanol.rar/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/nds/Digimon World - Dusk (USA).jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Digimon World Dusk <br>
+                Idioma: Español <br>
+                </p>
+                <a href="https://www.mediafire.com/file/1byw0gmxtyd3qnn/Digimon_World_-_Dusk_Espanol.rar/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/nds/jump!-ultimate-stars-nds.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Jump! Ultimate Stars <br>
+                Idioma: Español <br>
+                </p>
+                <a href="https://www.mediafire.com/file/wxw3csvbyhb4q8y/Jump%2521_Ultimate_Stars_Espanol.rar/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/nds/81E-klMy-PL._SL1500_.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Ben 10 Alien Force <br>
+                Idioma: Español <br>
+                </p>
+                <a href="https://www.mediafire.com/file/du41ym8qo1yt02u/Ben_10_Alien_Force_Espanol.rar/file" target="_blank">Descarga</a></div>
+        </div>
+        <div class="cuadritoJuego">
+            <img class="imgJuego" src="../img/juegos/nds/pokemon-mundo-misterioso-exploradores-oscuridad-box-art.jpg" alt="">
+            <div class="descJuego"><p>
+               <b>Nombre: Pokemon Mundo Misterioso: Exploradores de la Oscuridad <br>
+                Idioma: Español <br>
+                </p>
+                <a href="https://www.mediafire.com/file/59s1bm7eak0wdcs/Pokemon_Mundo_Misterioso_Exploradores_De_La_Oscuridad_Espanol.rar/file" target="_blank">Descarga</a></div>
         </div>
     </section>
 </body>
