--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="navbar">
       <a class="itemNav" onclick="tikiTaka('s1')">Inicio</a>
-      <div class="emu2"><!---->
+      <div class="emu2"><!--Parte de JUEGOS del NAV-->
         <button onclick="tikiTaka('juegos')">Juegos</button>
         <div class="listaNav">
           <a onclick="tikiTaka('gbaJuegos')">GameBoy Advance</a>
@@ -24,7 +24,7 @@
         </div>
     </div>
       
-      <div class="emu2"><!---->
+      <div class="emu2"><!--Parte de EMULADORES del NAV-->
           <button onclick="tikiTaka('emuladores')">Emuladores</button>
           <div class="listaNav">
             <a onclick="tikiTaka('gameboyadvance')">GameBoy Advance</a>
@@ -68,7 +68,7 @@
       <section class="ndsJuegos escond">
         <div class="pAr"><a onclick="tikiTaka('juegos')">> Juegos </a> <a>> Nintendo DS</a></div>
         <h1>Nintendo DS</h1>
-        <div><iframe src="html/ndsJuegos.html"></iframe></div><!-- SUPER NINTENDO-->
+        <div><iframe src="html/ndsJuegos.html"></iframe></div><!--NINTENDO DS-->
         <br>
       </section>
       <!-- Comienzo PARTE DE EMULADORES-->
