--- a/index.html
+++ b/index.html
@@ -88,31 +88,46 @@
       </section>
       <section class="gameboyadvance escond"><!-- GAME BOY ADVANCE-->
         <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> GameBoyAdvance</a></div> 
-        <h1>GameBoyAdvance</h1>
-        <ul class="listaEmu">
-          <li><a href="https://www.mediafire.com/file/jlcazo8sdvmgc5o/VisualBoyAdvance.rar/file" target="_blank"> VisualBoyAdvance</a></li>
-        </ul>
+          <div class="emuBox">
+            <h2>VisualBoyAdvance</h2>
+            <p> Nombre del archivo: VisualBoyAdvance.rar <br> Sistema: GameBoy Advance <br> Versi&oacute;n: 1.7.3 </p>
+            <a href="https://www.mediafire.com/file/jlcazo8sdvmgc5o/VisualBoyAdvance.rar/file" target="_blank"> Descargar</a>
+          </div>
       </section>
+
       <section class="superNintendo escond"><!-- SUPER NINTENDO-->
         <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> Super Nintendo</a></div> 
-        <h1>Super Nintendo</h1>
-        <ul class="listaEmu">
-          <li><a href="https://www.mediafire.com/file/4ab59cos9x206rg/ZSNES.rar/file" target="_blank"> ZSNES</a></li>
-        </ul>
+        <div class="emuBox">
+          <h2>Snes 9X</h2>
+          <p> Nombre del archivo: ZNES.rar <br> Sistema: Super Nintendo<br> Versi&oacute;n: 1.5.3 </p>
+          <a href="https://www.mediafire.com/file/4ab59cos9x206rg/ZSNES.rar/file" target="_blank"> Descargar</a>
+        </div>
       </section>
       <section class="nintendDs escond"><!-- NINTENDO DS-->
         <div class="pAr"><a onclick="tikiTaka('emuladores')">> Emuladores </a> <a>> Nintendo DS</a></div> 
-        <h1>Nintendo DS</h1>
-        <ul class="listaEmu">
-          <li><a href="https://www.mediafire.com/file/b60pp77hes5bqdm/DeSmuME.rar/file" target="_blank"> DeSmuME</a></li>
-        </ul>
+        <div class="emuBox">
+          <h2>DeSmuME</h2>
+          <p> Nombre del archivo: DeSmuME.rar <br> Sistema: Nintendo DS<br> Versi&oacute;n: 0.9.12 </p>
+          <a href="https://www.mediafire.com/file/b60pp77hes5bqdm/DeSmuME.rar/file" target="_blank"> Descargar</a>
+        </div>
       </section>
       <!-- Comienzo ASIDE-->
       <aside class="a1">
         <h2> Recomendaciones</h2>
+        <div class="divRec">
+          <img class="imgRec" src="img/juegos/gba/pkmrojofuego.jpg"> 
+          <p>Pokemon Rojo Fuego</p>
+        </div>
+        <div class="divRec">
+          <img class="imgRec" src="img/juegos/nds/jump!-ultimate-stars-nds.jpg"> 
+          <p>Jump! Ultimate Stars</p>
+        </div>
+        <div class="divRec">
+          <img class="imgRec" src="img/juegos/snes/megaman_x_snes-1.jpg"> 
+          <p>Mega Man X</p>
+        </div>
       </aside>
     </div>
-
     <footer>
       <div></div>
     </footer>
